@@ -1,4 +1,4 @@
-$Id: History,v 1.14 2001-08-09 20:07:00 johna Exp $
+$Id: History,v 1.15 2001-08-14 18:43:27 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,10 @@ committal in the CVS repository !
 
 History file for visualization/modeling
 ---------------------------------------
+
+14th August 2001  John Allison  (vis-V03-02-11)
+- Added sceneHandler.Begin/EndPrimitives messages to models (long
+  standing bug!).
 
 9th August 2001  John Allison  (vis-V03-02-10-00)
 - Removed G4ModelingParameters::hierarchy.  It is no longer used.  The
